[gd_scene load_steps=4 format=3 uid="uid://vw3k6es8640q"]

[ext_resource type="Script" uid="uid://dkxpay7l14g3e" path="res://camera.gd" id="1_33igt"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2ipy2"]
transparency = 1
blend_mode = 1
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_56ahh"]
material = SubResource("StandardMaterial3D_2ipy2")
radius = 0.025
height = 0.05

[node name="CustomCamera" type="Node3D"]
script = ExtResource("1_33igt")

[node name="TwistPivot" type="Node3D" parent="."]

[node name="PitchPivot" type="Node3D" parent="TwistPivot"]

[node name="Camera3D" type="Camera3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
current = true

[node name="CameraPivotIndicator" type="MeshInstance3D" parent="TwistPivot/PitchPivot"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.000473619, -0.00180811, 0.000866771)
mesh = SubResource("SphereMesh_56ahh")
skeleton = NodePath("../../..")
